--- a/MagicTheGatheringApp/MagicTheGatheringApp/Pages/DataPage.xaml
+++ b/MagicTheGatheringApp/MagicTheGatheringApp/Pages/DataPage.xaml
@@ -2,55 +2,18 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MagicTheGatheringApp.ViewModels"
-             xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms"
              x:Class="MagicTheGatheringApp.Pages.DataPage">
-  <ContentPage.BindingContext>
-    <local:DataViewModel/>
-  </ContentPage.BindingContext>
   <ContentPage.Content>
-    <Grid>
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
-      </Grid.RowDefinitions>
-      <StackLayout Grid.Row="0">
-        <Label x:Name="typeLabel" Text=""/>
-        <Label x:Name="setLabel" Text="Current Set: "/>
 
-        <Picker x:Name="pickerAxisLeft" Title="Left Axis:" SelectedIndex="1" SelectedIndexChanged="PickerAxisLeft_SelectedIndexChanged"/>
-        <Picker x:Name="pickerAxisBottom" Title="Bottom Axis:" SelectedIndex="1" SelectedIndexChanged="PickerAxisBottom_SelectedIndexChanged"/>
-      </StackLayout>
+    <StackLayout>
+      <Label x:Name="typeLabel" Text=""/>
+      <Label x:Name="setLabel" Text="Current Set: "/>
 
-      <chart:SfChart Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-        <chart:SfChart.ChartBehaviors>
-          <chart:ChartZoomPanBehavior EnableDoubleTap="True"/>
-        </chart:SfChart.ChartBehaviors>
+      <Picker x:Name="pickerAxisLeft" Title="Left Axis:" SelectedIndex="1" SelectedIndexChanged="PickerAxisLeft_SelectedIndexChanged"/>
+      <Picker x:Name="pickerAxisBottom" Title="Bottom Axis:" SelectedIndex="1" SelectedIndexChanged="PickerAxisBottom_SelectedIndexChanged"/>
 
-        <chart:SfChart.Series>
-          <chart:ScatterSeries ScatterHeight="32"
-	          ScatterWidth="32"
-	          ShapeType="Rectangle"
-	          ItemsSource ="{Binding Data}" 
-	          XBindingPath="XValue"
-	          YBindingPath="YValue">
-            <chart:ScatterSeries.DataMarker>
-              <chart:ChartDataMarker ShowLabel="True"/>
-            </chart:ScatterSeries.DataMarker>
-          </chart:ScatterSeries>
-        </chart:SfChart.Series>
-
-        <chart:SfChart.PrimaryAxis>
-          <chart:NumericalAxis Title="Power" Interval="2" Minimum="-16" Maximum="16"/>
-        </chart:SfChart.PrimaryAxis>
-
-        <chart:SfChart.SecondaryAxis>
-          <chart:NumericalAxis Title="Toughness" Interval="2" Minimum="-16" Maximum="16"/>
-        </chart:SfChart.SecondaryAxis>
-      </chart:SfChart>
-
-      <StackLayout Grid.Row="2">
-        <Picker x:Name="pickerSort" Title="Sort by score:" SelectedIndexChanged="PickerSort_SelectedIndexChanged"/>
-        <ListView x:Name="cardList" ItemTapped="CardList_ItemTapped"/>
-      </StackLayout>
-    </Grid>
+      <!--<Picker x:Name="pickerSort" Title="Sort by score:" SelectedIndexChanged="PickerSort_SelectedIndexChanged"/>-->
+      <ListView x:Name="cardList" ItemTapped="CardList_ItemTapped"/>
+    </StackLayout>
   </ContentPage.Content>
 </ContentPage>
